--- a/symfony/symfony.conf
+++ b/symfony/symfony.conf
@@ -2,8 +2,8 @@
     ServerName domain.tld
     ServerAlias www.domain.tld
 
-    DocumentRoot /var/www/symfony/web
-    <Directory /var/www/symfony/web>
+    DocumentRoot /var/www/symfony/public
+    <Directory /var/www/symfony/public>
         AllowOverride All
         Order Allow,Deny
         Allow from All
